added wallet integration setup, extension setup and teardown, extension mock file, wallet fixture. Refactor structure

--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,11 @@
 /coverage
 /k6/results
 /dist-k6
+/extensions
+# wallets
+wallets/sol-wallets.csv
+wallets/*.json
+!wallets/README.md
 # OS
 .DS_Store
 Thumbs.db
