updated structure, added synpress lib, refactored

--- a/package.json
+++ b/package.json
@@ -19,23 +19,15 @@
     "k6:run:with-trading:docker": "npm run k6:build && docker run --rm -i -v %cd%:/work -w /work -e BASE_URL -e CHAIN_ID -e RUN_BUY_SELL=true grafana/k6:0.50.0 run dist-k6/main.test.js",
     "k6:analyze": "npm run k6:build && k6 run dist-k6/analyze-api.js",
     "k6:launchpad": "npm run k6:build && k6 run dist-k6/launchpad-test.js",
-    "setup:phantom": "tsx scripts/setup-phantom.ts",
     "generate:wallets": "tsx scripts/generate-wallets.ts",
-    "setup:all": "npm run setup:phantom && npm run generate:wallets",
-    "global:setup": "tsx tests/global-setup.ts",
-    "test:mock": "cross-env PHANTOM_MODE=mock npm run setup:all && playwright test",
-    "test:real:local": "cross-env PHANTOM_MODE=real SOLANA_RPC=http://validator:8899 SOLANA_AIRDROP=1 npm run setup:phantom && npm run generate:wallets && playwright test",
-    "test:real:devnet": "cross-env PHANTOM_MODE=real SOLANA_RPC=https://api.devnet.solana.com SOLANA_AIRDROP=1 npm run setup:phantom && npm run generate:wallets && playwright test",
-    "docker:build": "docker build -t my-e2e-playwright:latest .",
-    "docker:test:mock": "docker run --rm -it --shm-size=1g --env PHANTOM_MODE=mock -v %cd%:/work -w /work my-e2e-playwright:latest bash -lc \"npm ci && npm run test:mock\"",
-    "docker:test:real:local": "docker compose up --build --abort-on-container-exit --exit-code-from e2e",
-    "docker:test:real:devnet": "docker run --rm -it --shm-size=1g -e PHANTOM_MODE=real -e SOLANA_RPC=https://api.devnet.solana.com -e SOLANA_AIRDROP=1 -v %cd%:/work -w /work my-e2e-playwright:latest bash -lc \"npm ci && npm run test:real:devnet\""
+    "global:setup": "tsx global-setup.ts"
   },
   "devDependencies": {
     "@playwright/test": "^1.48.2",
     "@solana/web3.js": "^1.98.4",
+    "@synthetixio/synpress": "^4.1.1",
     "@types/k6": "^1.3.1",
-    "@types/node": "^20.19.23",
+    "@types/node": "^20.19.24",
     "bip39": "^3.1.0",
     "bs58": "^6.0.0",
     "cross-env": "^7.0.3",
