--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,11 +1,17 @@
 {
   "compilerOptions": {
-    "module": "CommonJS",
-    "target": "ES2020",
-    "moduleResolution": "node",
+    "module": "NodeNext",
+    "moduleResolution": "NodeNext",
+    "target": "ES2022",
     "strict": true,
     "esModuleInterop": true,
     "skipLibCheck": true,
-    "forceConsistentCasingInFileNames": true
-  }
+
+    "allowImportingTsExtensions": true,
+    "noEmit": true,
+
+    "types": ["@playwright/test", "node"]
+  },
+  "include": ["tests/**/*", "setup/**/*", "types/**/*"]
 }
+
