--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,17 +1,23 @@
 {
   "compilerOptions": {
-    "module": "NodeNext",
-    "moduleResolution": "NodeNext",
+    "module": "ES2022",
+    "moduleResolution": "bundler",
     "target": "ES2022",
-    "strict": true,
+    "lib": ["ES2022", "DOM", "DOM.Iterable"],
+    "allowSyntheticDefaultImports": true,
     "esModuleInterop": true,
+    "strict": true,
     "skipLibCheck": true,
-
-    "allowImportingTsExtensions": true,
     "noEmit": true,
-
-    "types": ["@playwright/test", "node"]
+    "forceConsistentCasingInFileNames": true,
+    "baseUrl": ".",
+    "paths": {
+      "@/*": ["./*"]
+    },
+    "types": ["cypress"]
   },
-  "include": ["tests/**/*", "setup/**/*", "types/**/*"]
+  "include": ["**/*"],
+  "exclude": ["node_modules", "dist", "dist-k6"]
 }
+
 
