--- a/package.json
+++ b/package.json
@@ -4,31 +4,16 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "test": "playwright test",
-    "test:ui": "playwright test --ui",
-    "test:headed": "playwright test --headed",
-    "report": "playwright show-report",
-    "codegen": "playwright codegen",
-    "lint": "eslint . --ext .ts",
     "format": "prettier --write .",
+    "lint": "eslint . --ext .ts,.js",
+
+    "pw:install": "playwright install --with-deps",
+    "pw:test": "playwright test",
+    "pw:test:ui": "playwright test --ui",
+    "pw:syn:cache": "synpress test/wallet-setup",
 
     "k6:build": "tsc -p k6/tsconfig.k6.json",
-    "k6:dev": "tsc -p k6/tsconfig.k6.json --watch",
-    "k6:run:basic": "npm run k6:build && k6 run dist-k6/main.test.js",
-    "k6:run:basic:docker": "npm run k6:build && docker run --rm -i --env-file .env -v %cd%:/work -w /work grafana/k6:0.50.0 run dist-k6/main.test.js",
-    "k6:run:with-trading": "npm run k6:build && k6 run dist-k6/main.test.js -e RUN_BUY_SELL=true",
-    "k6:run:with-trading:docker": "npm run k6:build && docker run --rm -i -v %cd%:/work -w /work -e BASE_URL -e CHAIN_ID -e RUN_BUY_SELL=true grafana/k6:0.50.0 run dist-k6/main.test.js",
-    "k6:analyze": "npm run k6:build && k6 run dist-k6/analyze-api.js",
-    "k6:launchpad": "npm run k6:build && k6 run dist-k6/launchpad-test.js",
-
-    "generate:wallets": "tsx scripts/generate-wallets.ts",
-    "global:setup": "tsx setup/global/global-setup.ts",
-    "build": "tsc",
-    "test:ci": "playwright test --config=playwright.config.ts",
-    "test:wallet": "playwright test --project=chromium-metamask",
-    "generate:evm-wallets": "tsx scripts/generate-evm-wallets.ts",
-    "test:metamask": "npm run generate:evm-wallets && playwright test --project=chromium-metamask",
-    "syn:cache": "synpress test/wallet-setup"
+    "k6:run": "npm run k6:build && k6 run dist-k6/main.test.js"
   },
   "devDependencies": {
     "@playwright/test": "1.48.2",
