updated "buy/sell" tests/updated readme

--- a/.env.example
+++ b/.env.example
@@ -2,5 +2,5 @@ BASE_URL=base_url_here
 AUTH_TOKEN=auth_token_here
 CHAIN_ID=1
 AUTH_COOKIE_NAME=auth_token
-LOCALE=en
 SEED_PHRASE=seed_phrase_here
+META_MASK_PASSWORD=meta_mask_password_here
